--- a/index.html
+++ b/index.html
@@ -1,99 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Blogr]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/ef1d15023b.js" crossorigin="anonymous"></script>
+  <title>Blogr</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  Product
+  <header class="header">
+    <a href="" class="logo"><img src="images/logo.svg" alt=""></a>
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
+    <i class="fas fa-bars fa-2x" id="nav-toggle" style="color: white;"></i>
+    <nav>
+      <div class="nav-content">
+        <i class="fas fa-times" id="nav-close"></i>
+        <div class="nav-menu">
+          <ul class="nav-list">
+            <li class="nav-item">
+              Product
+              <ul class="sub-items">
+                <li class="sub-item">Overview</li>
+                <li class="sub-item">Pricing</li>
+                <li class="sub-item">Marketplace</li>
+                <li class="sub-item">Features</li>
+                <li class="sub-item">Integrations</li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              Company
+              <ul class="sub-items">
+                <li class="sub-item">About</li>
+                <li class="sub-item">Team</li>
+                <li class="sub-item">Blog</li>
+                <li class="sub-item">Careers</li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              Connect
+              <ul class="sub-items">
+                <li class="sub-item">Contact</li>
+                <li class="sub-item">Newsletter</li>
+                <li class="sub-item">LinkedIn</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="register">Login Sign Up</div>
+      </div>
+    </nav>
 
-  Company
+    <h1>A modern publishing platform</h1>
+    <p>Grow your audience and build your online brand</p>
+    <div class="buttonsDiv">
+      <a href="" class="btn start-free">Start for Free</a>
+      <a href="" class="btn learn-more">Learn More</a>
+    </div>
+  </header>
 
-  About
-  Team
-  Blog
-  Careers
+  <main>
+    <section class="section1">
+      <h2>Designed for the future</h2>
+      <h3>Introducing an extensible editor</h3>
+      <p class="detailing">
+        Blogr features an
+        exceedingly intuitive interface which lets you focus on one thing:
+        creating content. The editor supports management of multiple blogs and
+        allows easy manipulation of embeds such as images, videos, and Markdown.
+        Extensibility with plugins and themes provide easy ways to add
+        functionality or change the looks of a blog.
+      </p>
+      <h3>Robust content management</h3>
+      <p class="detailing">
+        Flexible content management enables users to easily move through posts.
+        Increase the usability of your blog by adding customized categories,
+        sections, format, or flow. With this functionality, you’re in full
+        control.
+      </p>
+    </section>
+    <section class="section2">
+      <div class="illustration-mobile"><img src="images/illustration-phones.svg" alt=""></div>
+      <h2>State of the Art Infrastructure</h2>
+      <p class="detailing">
+        With reliability and speed in
+        mind, worldwide data centers provide the backbone for ultra-fast
+        connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site
+        competitive.
+      </p>
+    </section>
 
-  Connect
+    <div class="wrapper3">
+      <div class="illustration-laptop">
+        <!-- Illustation is added through background-image -->
+      </div>
+      <div class="sideIssue1">
+        <h3>Free, open, simple</h3>
+        <p class="detailing">
+          Blogr is a free and open source application backed by a large community of helpful developers. It supports
+          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+          and
+          works seamlessly with Google Analytics. The architecture is clean and is
+          relatively easy to learn.
+        </p>
+        <h3>Powerful tooling</h3>
+        <p class="detailing"> Batteries included. We built a
+          simple and straightforward CLI tool that makes customization and
+          deployment a breeze, but capable of producing even the most complicated
+          sites.
+        </p>
+      </div>
+    </div>
+  </main>
 
-  Contact
-  Newsletter
-  LinkedIn
-  
-  Login
-  Sign Up
+  <footer>
+    <a href="" class="footer-head">
+      <img src="images/logo.svg" alt="" class="footLogo">
+    </a>
 
-  A modern publishing platform
-  Grow your audience and build your online brand
+    <div class="wrapper2">
+      <div class="footDiv">
+        <h4 class="footListHead">Product</h4>
+        <ul class="footSubList">
+          <li class="footListItems">Overview</li>
+          <li class="footListItems">Pricing</li>
+          <li class="footListItems">Marketplace</li>
+          <li class="footListItems">Features</li>
+          <li class="footListItems">Integrations</li>
+        </ul>
+      </div>
 
-  Start for Free
-  Learn More
+      <div class="footDiv">
+        <h4 class="footListHead">Company</h4>
+        <ul class="footSubList">
+          <li class="footListItems">About</li>
+          <li class="footListItems">Team</li>
+          <li class="footListItems">Blog</li>
+          <li class="footListItems">Careers</li>
+        </ul>
+      </div>
 
-  Designed for the future
+      <div class="footDiv">
+        <h4 class="footListHead">Connect</h4>
+        <ul class="footSubList">
+          <li class="footListItems">Contact</li>
+          <li class="footListItems">Newsletter</li>
+          <li class="footListItems">LinkedIn</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <script src="app.js"></script>
 </body>
+
 </html>
