--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <main>
     <section class="section1">
       <h2>Designed for the future</h2>
+      <div class="illustration-editor"><img src="images/illustration-editor-mobile.svg" alt=""></div>
       <h3>Introducing an extensible editor</h3>
       <p class="detailing">
         Blogr features an
