--- a/index.html
+++ b/index.html
@@ -67,33 +67,40 @@
   <main>
     <section class="section1">
       <h2>Designed for the future</h2>
-      <div class="illustration-editor"><img src="images/illustration-editor-mobile.svg" alt=""></div>
-      <h3>Introducing an extensible editor</h3>
-      <p class="detailing">
-        Blogr features an
-        exceedingly intuitive interface which lets you focus on one thing:
-        creating content. The editor supports management of multiple blogs and
-        allows easy manipulation of embeds such as images, videos, and Markdown.
-        Extensibility with plugins and themes provide easy ways to add
-        functionality or change the looks of a blog.
-      </p>
-      <h3>Robust content management</h3>
-      <p class="detailing">
-        Flexible content management enables users to easily move through posts.
-        Increase the usability of your blog by adding customized categories,
-        sections, format, or flow. With this functionality, you’re in full
-        control.
-      </p>
+      <div class="wrapper420">
+        <div class="illustration-editor"><img src="images/illustration-editor-mobile.svg" alt="" class="mobile"></div>
+        <div class="illustration-editor"><img src="images/illustration-editor-desktop.svg" alt="" class="desktop"></div>
+        <div class="wrapper520">
+          <h3>Introducing an extensible editor</h3>
+          <p class="detailing">
+            Blogr features an
+            exceedingly intuitive interface which lets you focus on one thing:
+            creating content. The editor supports management of multiple blogs and
+            allows easy manipulation of embeds such as images, videos, and Markdown.
+            Extensibility with plugins and themes provide easy ways to add
+            functionality or change the looks of a blog.
+          </p>
+          <h3>Robust content management</h3>
+          <p class="detailing">
+            Flexible content management enables users to easily move through posts.
+            Increase the usability of your blog by adding customized categories,
+            sections, format, or flow. With this functionality, you’re in full
+            control.
+          </p>
+        </div>
+      </div>
     </section>
     <section class="section2">
       <div class="illustration-mobile"><img src="images/illustration-phones.svg" alt=""></div>
-      <h2>State of the Art Infrastructure</h2>
-      <p class="detailing">
-        With reliability and speed in
-        mind, worldwide data centers provide the backbone for ultra-fast
-        connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site
-        competitive.
-      </p>
+      <div class="wrapper620">
+        <h2>State of the Art Infrastructure</h2>
+        <p class="detailing">
+          With reliability and speed in
+          mind, worldwide data centers provide the backbone for ultra-fast
+          connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site
+          competitive.
+        </p>
+      </div>
     </section>
 
     <div class="wrapper3">
