--- a/index.html
+++ b/index.html
@@ -15,46 +15,51 @@
 
 <body>
   <header class="header">
-    <a href="" class="logo"><img src="images/logo.svg" alt=""></a>
+    <div class="navinav">
+      <a href="" class="logo"><img src="images/logo.svg" alt=""></a>
 
-    <i class="fas fa-bars fa-2x" id="nav-toggle" style="color: white;"></i>
-    <nav>
-      <div class="nav-content">
-        <i class="fas fa-times" id="nav-close"></i>
+      <i class="fas fa-bars fa-2x" id="nav-toggle" style="color: white;"></i>
+
+      <nav>
+        <i class="fas fa-times fa-2x" id="nav-close"></i>
+
         <div class="nav-menu">
           <ul class="nav-list">
             <li class="nav-item">
-              Product
+              Product <img src="images/icon-arrow-light.svg" alt="" class="whitearrow">
+              <img src="images/icon-arrow-dark.svg" alt="" class="darkarrow">
               <ul class="sub-items">
-                <li class="sub-item">Overview</li>
-                <li class="sub-item">Pricing</li>
-                <li class="sub-item">Marketplace</li>
-                <li class="sub-item">Features</li>
-                <li class="sub-item">Integrations</li>
+                <li>Overview</li>
+                <li>Pricing</li>
+                <li>Marketplace</li>
+                <li>Features</li>
+                <li>Integrations</li>
               </ul>
             </li>
             <li class="nav-item">
-              Company
+              Company <img src="images/icon-arrow-light.svg" alt="" class="whitearrow"> <img src="images/icon-arrow-dark.svg" alt="" class="darkarrow">
               <ul class="sub-items">
-                <li class="sub-item">About</li>
-                <li class="sub-item">Team</li>
-                <li class="sub-item">Blog</li>
-                <li class="sub-item">Careers</li>
+                <li>About</li>
+                <li>Team</li>
+                <li>Blog</li>
+                <li>Careers</li>
               </ul>
             </li>
             <li class="nav-item">
-              Connect
+              Connect <img src="images/icon-arrow-light.svg" alt="" class="whitearrow"> <img src="images/icon-arrow-dark.svg" alt="" class="darkarrow">
               <ul class="sub-items">
-                <li class="sub-item">Contact</li>
-                <li class="sub-item">Newsletter</li>
-                <li class="sub-item">LinkedIn</li>
+                <li>Contact</li>
+                <li>Newsletter</li>
+                <li>LinkedIn</li>
               </ul>
             </li>
           </ul>
         </div>
-        <div class="register">Login Sign Up</div>
+      </nav>
+      <div class="register"> <a href="" class="btn learn-more">Login</a>
+        <a href="" class="btn start-free">Sign Up</a>
       </div>
-    </nav>
+    </div>
 
     <h1>A modern publishing platform</h1>
     <p>Grow your audience and build your online brand</p>
